apis/typeahead/deploy/deploy.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: typeahead
  labels:
    app: typeahead
    service: typeahead
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: typeahead
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typeahead
  labels:
    app: typeahead
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typeahead
      version: v1
  template:
    metadata:
      labels:
        app: typeahead
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: skyhive
      hostAliases:
        - ip: 15.222.74.209
          hostnames:
            - dev-e.skyhive.io
      containers:
        - name: typeahead
          image: 596298976885.dkr.ecr.ca-central-1.amazonaws.com/typeahead:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typeahead
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /typeahead/
            pathType: Prefix
            backend:
              service:
                name: typeahead
                port:
                  number: 8080
